--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 30/03/2020 17:36:17 GMT */
+/* dan - 07/04/2020 18:27:47 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
