--- a/autoglass-arquivos/CSS.aut.far.qd-style-guide.css
+++ b/autoglass-arquivos/CSS.aut.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* PORYGONZ - 13/02/2020 15:06:54 GMT */
+/* MEWTWO - 01/04/2020 11:08:43 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
