--- a/onstores-arquivos/CSS.ccp.hub.institucional.css
+++ b/onstores-arquivos/CSS.ccp.hub.institucional.css
@@ -1,2 +1,3 @@
-/* MEWTWO - 13/04/2020 09:30:46 GMT */
+/* MEWTWO - 13/04/2020 10:47:36 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
+.mz-institucional{border:1px solid red}
