--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* dan - 07/04/2020 18:27:47 GMT-0300 */
+/* Lugia - 20/04/2020 12:36:01 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
