--- a/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
+++ b/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 17/04/2020 18:53:37 GMT */
+/* Lugia - 22/04/2020 12:09:06 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
