#Localização - Barra fixa do topo fica desconfigurada ao rolar scroll, quando a mensagem de Localização está aberta

--- a/autoglass-arquivos/CSS.aut.far.qd-style-guide.css
+++ b/autoglass-arquivos/CSS.aut.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* MEWTWO - 01/04/2020 11:08:43 GMT */
+/* Anonymouswill - 24/04/2020 16:13:53 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
