--- a/kidsbrasil-arquivos/CSS.kid.moo.institucional.css
+++ b/kidsbrasil-arquivos/CSS.kid.moo.institucional.css
@@ -1,2 +1,2 @@
-/* DESKTOP-TKPPA5A - 24/04/2020 13:43:38 GMT */
+/* DESKTOP-NA07EK9 - 24/04/2020 16:02:38 GMT */
 .mz-institucional{padding-top:36px}.mz-institucional .mz-institucional__navigation--menu ul li p{font-size:16px;text-transform:uppercase;font-weight:bold;margin-top:16px;color:#00a9e0}.mz-institucional .mz-institucional__content h1{font-size:36px;margin-bottom:32px}
