--- a/santuario-arquivos/@style-mixins.css
+++ b/santuario-arquivos/@style-mixins.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 25/06/2019 18:33:31 GMT */
+/* Anonymouswill - 27/04/2020 13:29:51 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .table-th{padding:5px 20px;background:#fff;font-weight:400}
