--- a/santuario-arquivos/CSS.sant.all.login.css
+++ b/santuario-arquivos/CSS.sant.all.login.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 25/06/2019 18:33:35 GMT */
+/* Anonymouswill - 27/04/2020 13:29:55 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 #vtexIdContainer{background:url("//santuarionacional.vteximg.com.br/arquivos/bglogin.jpg") no-repeat center top}
