--- a/kidsbrasil-arquivos/CSS.kid.moo.institucional.css
+++ b/kidsbrasil-arquivos/CSS.kid.moo.institucional.css
@@ -1,2 +1,2 @@
-/* Lugia - 27/04/2020 17:25:14 GMT */
+/* DESKTOP-TKPPA5A - 27/04/2020 19:37:26 GMT */
 .mz-institucional{padding-top:36px}.mz-institucional .mz-institucional__navigation--menu ul li p{font-size:16px;text-transform:uppercase;font-weight:bold;margin-top:16px;color:#00a9e0}.mz-institucional .mz-institucional__content h1{font-size:36px;margin-bottom:32px}
