--- a/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
+++ b/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 22/04/2020 12:09:06 GMT */
+/* Anonymouswill - 04/05/2020 11:37:09 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
