--- a/ferragensfloresta-arquivos/CSS.ffa.home.css
+++ b/ferragensfloresta-arquivos/CSS.ffa.home.css
@@ -1,2 +1,3 @@
-/* MEWTWO - 05/05/2020 17:15:13 GMT */
+/* MEWTWO - 06/05/2020 13:08:10 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
+.mz-home__mosaic.first img{padding:10px}.mz-home__mosaic.second img{padding:10px}.mz-home__sliderfull.mobile{display:block}@media (min-width:992px){.mz-home__sliderfull.mobile{display:none}}.mz-home__sliderfull.desktop{display:none}@media (min-width:992px){.mz-home__sliderfull.desktop{display:block}}
