--- a/mcdbr-arquivos/CSS.mcd.fre.dev.institucional.css
+++ b/mcdbr-arquivos/CSS.mcd.fre.dev.institucional.css
@@ -1,1 +1,2 @@
-/* LUCARIO - 16/01/2020 20:02:37 GMT */
+/* DESKTOP-2VAUUHI - 08/05/2020 12:25:31 GMT */
+.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap p{margin:12px 0;font-size:12px;line-height:14px;color:#252525;word-wrap:break-word}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap a{text-decoration:underline;color:#08c}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap h2{color:#bd0017;margin:32px 0;font-size:21px;font-weight:bold}
