--- a/allbags-arquivos/CSS.abs.hog.orders.css
+++ b/allbags-arquivos/CSS.abs.hog.orders.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 25/02/2020 08:05:46 GMT */
+/* Anonymouswill - 18/05/2020 12:32:59 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
