--- a/casaprado-arquivos/CSS.csp.far.qd-style-guide.css
+++ b/casaprado-arquivos/CSS.csp.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 07/05/2020 19:20:06 GMT */
+/* Lugia - 27/05/2020 10:33:23 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
