--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* Lugia - 20/04/2020 12:36:01 GMT */
+/* dan - 08/05/2020 10:13:56 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
