--- a/conceitoe-arquivos/CSS.con.e.search.css
+++ b/conceitoe-arquivos/CSS.con.e.search.css
@@ -1,2 +1,2 @@
-/* Lugia - 11/11/2019 18:28:05 GMT */
+/* DESKTOP-TKPPA5A - 28/05/2020 09:21:28 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
