--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* dan - 08/05/2020 10:13:56 GMT-0300 */
+/* DESKTOP-NA07EK9 - 12/06/2020 17:37:02 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
