--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 12/06/2020 17:37:02 GMT */
+/* dan - 17/06/2020 05:55:38 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
