--- a/abrakadabra-arquivos/CSS.abr.lok.wishlist.css
+++ b/abrakadabra-arquivos/CSS.abr.lok.wishlist.css
@@ -1,3 +1,3 @@
-/* dan - 12/06/2020 16:07:42 GMT-0300 */
+/* Anonymouswill - 22/06/2020 10:41:11 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .mz-wishlist{padding-top:50px}.mz-wishlist .mz-wishlist__shelf .mz-wishlist__shelf--title h2{color:#000;font-size:32px;font-weight:600;text-align:center;text-transform:uppercase;margin-bottom:45px}.mz-wishlist .mz-wishlist__shelf .mz-wishlist__shelf--title h2:before,.mz-wishlist .mz-wishlist__shelf .mz-wishlist__shelf--title h2:after{content:'';height:2px;background-color:#ed1c24;width:300px;display:inline-block;position:relative;top:-10px}.mz-wishlist .mz-wishlist__shelf .mz-wishlist__shelf--title h2:before{right:10px}.mz-wishlist .mz-wishlist__shelf .mz-wishlist__shelf--title h2:after{left:10px}.mz-wishlist h3{margin-top:35px}.mz-wishlist h3,.mz-wishlist p{text-align:center}
