--- a/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
+++ b/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 02/06/2020 12:48:51 GMT */
+/* Lugia - 23/06/2020 12:21:13 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
