--- a/onstores-arquivos/CSS.ccp.hub.common.inc.css
+++ b/onstores-arquivos/CSS.ccp.hub.common.inc.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 13/04/2020 11:43:36 GMT */
+/* DESKTOP-NA07EK9 - 05/06/2020 16:33:20 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 @media (min-width:1200px){.container{width:90%;max-width:1250px;min-width:1170px}}
