--- a/mundocristao-arquivos/CSS.emc.cty.orders.css
+++ b/mundocristao-arquivos/CSS.emc.cty.orders.css
@@ -1,3 +1,3 @@
-/* DESKTOP-TKPPA5A - 03/06/2020 16:08:29 GMT */
+/* dan - 23/06/2020 15:41:20 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .orders-qd-v1-orderList .bootstrap2-3-2 .vtex-bootstrap .page-header h1{color:#222222;font-size:18px;font-weight:900;text-transform:uppercase;display:block;padding-bottom:14px;border-bottom:1px #e3e3e3 solid;text-align:center;line-height:1.2;margin-bottom:20px;font-weight:normal;margin-bottom:15px}
