--- a/ferragensfloresta-arquivos/CSS.ffa.home.css
+++ b/ferragensfloresta-arquivos/CSS.ffa.home.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 06/05/2020 16:39:26 GMT */
+/* MacBook-Pro - 25/06/2020 17:04:22 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-.mz-home__mosaic.first img{padding:10px}.mz-home__mosaic.second img{padding:10px}.mz-home__sliderfull.mobile{display:block}@media (min-width:992px){.mz-home__sliderfull.mobile{display:none}}.mz-home__sliderfull.desktop{display:none}@media (min-width:992px){.mz-home__sliderfull.desktop{display:block}}
+.mz-home__sliderfull .slick-nav .slick-prev{left:13vw;opacity:.5}.mz-home__sliderfull .slick-nav .slick-next{right:13vw;opacity:.5}.mz-home__sliderfull .slick-dots{z-index:999}.mz-home__sliderfull .slick-dots li button{background-color:#667358;opacity:.35}.mz-home__sliderfull .slick-dots .slick-active button{opacity:1}.mz-home .whatsapp-button{position:fixed;right:0;bottom:10px}.mz-home__mosaic.first img{padding:10px}.mz-home__mosaic.second img{padding:10px}.mz-home__sliderfull.mobile{display:block}@media (min-width:992px){.mz-home__sliderfull.mobile{display:none}}.mz-home__sliderfull.desktop{display:none}@media (min-width:992px){.mz-home__sliderfull.desktop{display:block}}
