--- a/santuario-arquivos/@style-mixins.css
+++ b/santuario-arquivos/@style-mixins.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 17/06/2020 16:08:05 GMT */
+/* dan - 26/06/2020 17:11:14 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .table-th{padding:5px 20px;background:#fff;font-weight:400}
