--- a/santuario-arquivos/CSS.sant.all.login.css
+++ b/santuario-arquivos/CSS.sant.all.login.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 17/06/2020 16:08:10 GMT */
+/* dan - 26/06/2020 17:11:17 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 #vtexIdContainer{background:url("//santuarionacional.vteximg.com.br/arquivos/bglogin.jpg") no-repeat center top}
