--- a/mcdec-arquivos/CSS.mcd.fre.dev.ec.institucional.css
+++ b/mcdec-arquivos/CSS.mcd.fre.dev.ec.institucional.css
@@ -1,2 +1,2 @@
-/* DESKTOP-TKPPA5A - 30/06/2020 16:12:21 GMT */
+/* PC-QUARTO - 30/06/2020 19:46:23 GMT-0300 */
 .institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap p{margin:12px 0;font-size:12px;line-height:14px;color:#252525;word-wrap:break-word}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap a{text-decoration:underline;color:#08c}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap h2{color:#bd0017;margin:32px 0;font-size:21px;font-weight:bold}
