--- a/mcdcr-arquivos/CSS.mcd.fre.dev.cr.institucional.css
+++ b/mcdcr-arquivos/CSS.mcd.fre.dev.cr.institucional.css
@@ -1,2 +1,2 @@
-/* DESKTOP-TKPPA5A - 18/06/2020 20:30:47 GMT */
+/* DESKTOP-2VAUUHI - 01/07/2020 13:06:16 GMT */
 .institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap p{margin:12px 0;font-size:12px;line-height:14px;color:#252525;word-wrap:break-word}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap a{text-decoration:underline;color:#08c}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap h2{color:#bd0017;margin:32px 0;font-size:21px;font-weight:bold}
