--- a/superabc-arquivos/CSS.sup.abc.custom.css
+++ b/superabc-arquivos/CSS.sup.abc.custom.css
@@ -1,2 +1,2 @@
-/* DESKTOP-TON - 03/07/2020 13:53:28 GMT */
-header header .tipbar .nome_loja{color:#e30613;text-decoration:underline}header header .tipbar .button_alterar_loja{margin-left:10px;background:#e30613;color:#FFF;padding:4px 10px;border-radius:4px;cursor:pointer}
+/* DESKTOP-TON - 03/07/2020 14:23:01 GMT */
+header .tipbar .nome_loja{color:#e30613;text-decoration:underline}header .tipbar .button_alterar_loja{margin-left:10px;background:#e30613;color:#FFF;padding:4px 10px;border-radius:4px;cursor:pointer}
