--- a/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
+++ b/azeiteorfeu-arquivos/CSS.azo.hog.orders.css
@@ -1,2 +1,2 @@
-/* dan - 03/07/2020 11:38:09 GMT-0300 */
+/* Lugia - 08/07/2020 10:27:25 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
