--- a/supernosso-arquivos/CSS.sno.none.home.css
+++ b/supernosso-arquivos/CSS.sno.none.home.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 01/07/2020 18:50:16 GMT */
+/* MacBook-Pro - 10/07/2020 19:56:18 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
