--- a/platos-arquivos/CSS.plp.new.landingpages.css
+++ b/platos-arquivos/CSS.plp.new.landingpages.css
@@ -1,3 +1,3 @@
-/* PC-QUARTO - 17/07/2020 21:41:21 GMT-0300 */
+/* PC-QUARTO - 21/07/2020 14:11:23 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-.MZlandingpages{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}
+.MZlandingpages{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;border:1px solid red}.MZlandingpages .mz-atendidoconsultor--text,.MZlandingpages .mz-indicadoprofessor--text,.MZlandingpages .mz-aluno--text{display:none}.MZlandingpages .mz-atendidoconsultor--text.mz-input-on,.MZlandingpages .mz-indicadoprofessor--text.mz-input-on,.MZlandingpages .mz-aluno--text.mz-input-on{display:block}
