--- a/natucor-arquivos/CSS.nat.far.qd-style-guide.css
+++ b/natucor-arquivos/CSS.nat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Snorlax - 25/09/2019 12:15:33 GMT */
+/* DESKTOP-NA07EK9 - 30/07/2020 12:55:27 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
