--- a/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
+++ b/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 23/06/2020 12:21:13 GMT */
+/* Anonymouswill - 05/08/2020 15:05:41 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
