--- a/allbags-arquivos/CSS.abs.hog.orders.css
+++ b/allbags-arquivos/CSS.abs.hog.orders.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 18/05/2020 12:32:59 GMT */
+/* Lugia - 06/08/2020 14:19:11 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
