--- a/autonext-arquivos/CSS.aun.far.qd-style-guide.css
+++ b/autonext-arquivos/CSS.aun.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 24/03/2020 14:45:59 GMT */
+/* DESKTOP-NA07EK9 - 11/08/2020 10:46:40 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
