--- a/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
+++ b/caterpillar-arquivos/CSS.cat.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 05/08/2020 15:05:41 GMT */
+/* Lugia - 11/08/2020 16:28:52 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
