--- a/platos-arquivos/CSS.plp.new.product.css
+++ b/platos-arquivos/CSS.plp.new.product.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 11/08/2020 12:34:42 GMT */
+/* MEWTWO - 12/08/2020 09:46:50 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-.mz-product .mz-marca-produto h3{margin-bottom:0 !important}.mz-product .mz-marca-produto .voucher-coupon{font-size:13px !important}
+.mz-product .mz-marca-produto h3{margin-bottom:0 !important}.mz-product .mz-marca-produto p{font-size:11px !important}.mz-product .mz-marca-produto .voucher-coupon{font-size:11px !important}
