--- a/platos-arquivos/CSS.plp.new.product.css
+++ b/platos-arquivos/CSS.plp.new.product.css
@@ -1,3 +1,3 @@
-/* MEWTWO - 12/08/2020 09:46:50 GMT */
+/* PC-QUARTO - 18/08/2020 12:40:47 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .mz-product .mz-marca-produto h3{margin-bottom:0 !important}.mz-product .mz-marca-produto p{font-size:11px !important}.mz-product .mz-marca-produto .voucher-coupon{font-size:11px !important}
