--- a/mcdco-arquivos/MOPDEV-CSS.mcd.fre.co.institucional.css
+++ b/mcdco-arquivos/MOPDEV-CSS.mcd.fre.co.institucional.css
@@ -1,2 +1,2 @@
-/* DESKTOP-2VAUUHI - 24/08/2020 17:37:14 GMT */
+/* DESKTOP-TON - 26/08/2020 16:37:08 GMT */
 .institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap p{margin:12px 0;font-size:12px;line-height:14px;color:#252525;word-wrap:break-word}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap a{text-decoration:underline;color:#08c}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap h2{color:#bd0017;margin:32px 0;font-size:21px;font-weight:bold}
