--- a/samatec-arquivos/CSS.sam.far.qd-style-guide.css
+++ b/samatec-arquivos/CSS.sam.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 07/08/2020 08:31:38 GMT */
+/* DESKTOP-GUOJE28 - 26/08/2020 16:32:13 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
