--- a/samatec-arquivos/CSS.sam-B2B.far.qd-style-guide.css
+++ b/samatec-arquivos/CSS.sam-B2B.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 06/08/2020 10:10:57 GMT */
+/* DESKTOP-GUOJE28 - 26/08/2020 16:32:14 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
