--- a/allbags-arquivos/CSS.abs.hog.orders.css
+++ b/allbags-arquivos/CSS.abs.hog.orders.css
@@ -1,2 +1,2 @@
-/* Lugia - 06/08/2020 14:19:11 GMT */
+/* Anonymouswill - 27/08/2020 17:31:05 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
