--- a/movize-arquivos/css/b8one.desktop.general.css
+++ b/movize-arquivos/css/b8one.desktop.general.css
@@ -200,16 +200,16 @@ button[aria-label][data-balloon-pos] {
 }
 [aria-label][data-balloon-pos][data-balloon-pos='left']:after {
   margin-right: 10px;
-  right: 100%;
-  top: 50%;
+  left: 190%;
+  top: 210%;
   transform: translate(var(--balloon-move), -50%);
 }
 [aria-label][data-balloon-pos][data-balloon-pos='left']:before {
   width: 0;
   height: 0;
   border: 5px solid transparent;
-  border-left-color: #101010;
-  right: 100%;
+  border-right-color: #101010;
+  left: 105%;
   top: 50%;
   transform: translate(var(--balloon-move), -50%);
 }
