--- a/motoatacama-arquivos/CSS.mta.far.qd-style-guide.css
+++ b/motoatacama-arquivos/CSS.mta.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* PIKACHU - 02/09/2019 16:45:17 GMT */
+/* DESKTOP-US8NRQT - 25/08/2020 13:06:26 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
