--- a/mundocristao-arquivos/CSS.emc-B2B.cty.orders.css
+++ b/mundocristao-arquivos/CSS.emc-B2B.cty.orders.css
@@ -1,3 +1,3 @@
-/* MABUCHI-KOU - 23/07/2020 20:05:05 GMT */
+/* Lugia - 14/09/2020 17:20:50 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .orders-qd-v1-orderList .bootstrap2-3-2 .vtex-bootstrap .page-header h1{color:#222222;font-size:18px;font-weight:900;text-transform:uppercase;display:block;padding-bottom:14px;border-bottom:1px #e3e3e3 solid;text-align:center;line-height:1.2;margin-bottom:20px;font-weight:normal;margin-bottom:15px}
