--- a/livrofacil-arquivos/CSS.liv.fac.system.css
+++ b/livrofacil-arquivos/CSS.liv.fac.system.css
@@ -1,2 +1,2 @@
-/* magikarp - 17/12/2019 11:24:32 GMT */
+/* DESKTOP-DUICETC - 15/09/2020 09:25:09 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
