--- a/ferragensfloresta-arquivos/CSS.ffa.mz-institucional.css
+++ b/ferragensfloresta-arquivos/CSS.ffa.mz-institucional.css
@@ -1,3 +1,3 @@
-/* DESKTOP-GUOJE28 - 15/09/2020 12:40:13 GMT */
+/* DESKTOP-GUOJE28 - 15/09/2020 12:48:27 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-#institucional-content{padding:230px 0 50px}#institucional-content .titulo-institucional{font-weight:bold;font-size:16px;margin-bottom:36px}#institucional-content .titulo-institucional:after{content:"";display:block;width:45px;height:3px;left:739.1px;background:#99A57D;margin-top:12px}
+#institucional-content{padding:230px 0 50px}#institucional-content .titulo-institucional{font-weight:500;margin-bottom:36px}#institucional-content .titulo-institucional:after{content:"";display:block;width:45px;height:3px;left:739.1px;background:#99A57D;margin-top:12px}
