samatec - formulario cadastro

--- a/samatec-arquivos/CSS.sam.far.qd-style-guide.css
+++ b/samatec-arquivos/CSS.sam.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-GUOJE28 - 26/08/2020 16:32:13 GMT */
+/* davids - 15/09/2020 08:57:01 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
