--- a/mcdbr-arquivos/MOPDEV-CSS.mcd.fre.institucional.css
+++ b/mcdbr-arquivos/MOPDEV-CSS.mcd.fre.institucional.css
@@ -1,2 +1,2 @@
-/* DESKTOP-2VAUUHI - 01/09/2020 12:26:05 GMT */
+/* DESKTOP-A3RCDI5 - 25/09/2020 15:31:14 GMT */
 .institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap p{margin:12px 0;font-size:12px;line-height:14px;color:#252525;word-wrap:break-word}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap a{text-decoration:underline;color:#08c}.institucional-termo-uso-qd-v1-content .mz-frey-termo-e-condicao .termo-uso-qd-v1 .termo-uso-qd-v1-wrap h2{color:#bd0017;margin:32px 0;font-size:21px;font-weight:bold}
