--- a/lupochile-arquivos/CSS.lupochile.lup.institucional.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.institucional.css
@@ -1,2 +1,3 @@
-/* Anonymouswill - 28/09/2020 17:54:06 GMT */
+/* Anonymouswill - 29/09/2020 18:16:21 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
+body.institucional .mx-center{margin:10px auto}body.institucional h2{margin:15px 0;font-size:28px;color:#63a1d9}
