--- a/santuario-arquivos/@style-mixins.css
+++ b/santuario-arquivos/@style-mixins.css
@@ -1,3 +1,3 @@
-/* dan - 26/06/2020 17:11:14 GMT-0300 */
+/* DESKTOP-GUOJE28 - 29/09/2020 11:28:38 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .table-th{padding:5px 20px;background:#fff;font-weight:400}
