--- a/santuario-arquivos/CSS.sant.all.login.css
+++ b/santuario-arquivos/CSS.sant.all.login.css
@@ -1,3 +1,3 @@
-/* dan - 26/06/2020 17:11:17 GMT-0300 */
+/* DESKTOP-GUOJE28 - 29/09/2020 11:28:40 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 #vtexIdContainer{background:url("//santuarionacional.vteximg.com.br/arquivos/bglogin.jpg") no-repeat center top}
