--- a/autonext-arquivos/CSS.aun.far.qd-style-guide.css
+++ b/autonext-arquivos/CSS.aun.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 11/08/2020 10:46:40 GMT */
+/* davids - 02/10/2020 13:53:46 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
