--- a/autonext-arquivos/CSS.aun.far.qd-style-guide.css
+++ b/autonext-arquivos/CSS.aun.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* davids - 02/10/2020 13:53:46 GMT-0300 */
+/* DESKTOP-US8NRQT - 07/10/2020 07:53:09 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
