--- a/lupochile-arquivos/CSS.lupochile.lup.home.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.home.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 29/09/2020 18:13:57 GMT */
+/* Lugia - 23/10/2020 12:31:18 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 @media (max-width:1080px){body .mx-benefits-bar{display:none}}
