--- a/karcherchile-arquivos/CSS.kcl.hog.orders.css
+++ b/karcherchile-arquivos/CSS.kcl.hog.orders.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 25/10/2020 13:14:43 GMT */
+/* Anonymouswill - 28/10/2020 11:59:49 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
