oggy - icons / solving conflicts

--- a/oggi-arquivos/CSS.ogg.far.qd-style-guide.css
+++ b/oggi-arquivos/CSS.ogg.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 14/10/2020 07:26:36 GMT */
+/* davids - 30/10/2020 11:50:06 GMT-0300 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
