--- a/alianzacosmeticos-arquivos/CSS.ali.far.qd-style-guide.css
+++ b/alianzacosmeticos-arquivos/CSS.ali.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 27/08/2020 18:10:27 GMT */
+/* Anonymouswill - 30/10/2020 11:06:25 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
