autonext - filtro/tipbar/termo de busca/tamanhos banners

--- a/autonext-arquivos/CSS.aun.far.qd-style-guide.css
+++ b/autonext-arquivos/CSS.aun.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-US8NRQT - 07/10/2020 07:53:09 GMT */
+/* davids - 03/11/2020 09:26:43 GMT-0200 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
