--- a/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
+++ b/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 11/10/2020 14:40:38 GMT */
+/* Anonymouswill - 03/11/2020 12:08:36 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
