--- a/cafe-orfeu-arquivos/CSS.cfo.har.atendimento.css
+++ b/cafe-orfeu-arquivos/CSS.cfo.har.atendimento.css
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-/* DESKTOP-GUOJE28 - 28/10/2020 11:31:32 GMT */
-=======
-/* Anonymouswill - 30/10/2020 17:43:40 GMT */
->>>>>>> 1aa2b9c1f66cd0f26ce1034e098079bb5a061ab3
+/* Lugia - 05/11/2020 17:31:45 GMT */
