--- a/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
+++ b/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 03/11/2020 12:08:36 GMT */
+/* Lugia - 09/11/2020 10:22:41 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
