--- a/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 29/09/2020 18:13:56 GMT */
+/* Lugia - 11/11/2020 18:19:06 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
