--- a/lupochile-arquivos/CSS.lupochile.lup.search.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.search.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 29/09/2020 18:14:00 GMT */
+/* Lugia - 11/11/2020 18:19:07 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
