--- a/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
@@ -1,2 +1,2 @@
-/* Lugia - 11/11/2020 18:19:06 GMT */
+/* Anonymouswill - 23/11/2020 18:46:50 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
