--- a/wnf-arquivos/CSS.wnf.wnf.home.css
+++ b/wnf-arquivos/CSS.wnf.wnf.home.css
@@ -1,2 +1,2 @@
-/* DESKTOP-GUOJE28 - 23/09/2020 10:58:58 GMT */
+/* davids - 24/11/2020 10:30:31 GMT-0200 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
