--- a/lupochile-arquivos/CSS.lupochile.lup.institucional.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.institucional.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 02/12/2020 13:02:06 GMT */
+/* Lugia - 08/12/2020 18:30:17 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-body.institucional .mx-center{margin:10px auto}body.institucional h2{margin:15px 0;font-size:28px;color:#63a1d9}
+.block_institucional h2{margin:15px 0;font-size:28px;color:#63a1d9}.block_institucional p{margin:25px 5vw;font-size:16px}
