--- a/lupochile-arquivos/CSS.lupochile.lup.system.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.system.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 02/12/2020 13:02:08 GMT */
+/* Lugia - 09/12/2020 11:41:27 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
