--- a/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
+++ b/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 03/12/2020 11:32:00 GMT */
+/* Lugia - 30/11/2020 10:07:41 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
