--- a/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
+++ b/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 10/12/2020 22:21:00 GMT */
+/* Anonymouswill - 03/12/2020 11:32:00 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
