--- a/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
+++ b/miminhokids-arquivos/CSS.mmk.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 03/12/2020 11:32:00 GMT */
+/* Lugia - 21/12/2020 12:49:15 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
