--- a/lupochile-arquivos/CSS.lupochile.lup.home.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.home.css
@@ -1,3 +1,3 @@
-/* Lugia - 09/12/2020 20:04:29 GMT */
+/* Anonymouswill - 21/12/2020 17:57:17 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 body .mx-benefits-bar{padding:20px !important}@media (max-width:1080px){body .mx-benefits-bar{display:none}}
