--- a/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.atendimento.css
@@ -1,2 +1,2 @@
-/* Lugia - 09/12/2020 20:04:29 GMT */
+/* Anonymouswill - 21/12/2020 17:57:16 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
