--- a/lupochile-arquivos/CSS.lupochile.lup.search.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.search.css
@@ -1,2 +1,2 @@
-/* Lugia - 09/12/2020 20:04:30 GMT */
+/* Anonymouswill - 21/12/2020 17:57:19 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
