--- a/casavideo-arquivos/CSS.cv.casavideo.investor.css
+++ b/casavideo-arquivos/CSS.cv.casavideo.investor.css
@@ -1,3 +1,3 @@
-/* DESKTOP-GUOJE28 - 05/01/2021 18:14:05 GMT */
+/* DESKTOP-GUOJE28 - 06/01/2021 10:12:19 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-body.home-investor main{background:url("../../Images/banner-home.png") no-repeat center center;background-size:cover}body.home-investor main .mz-banner-home-info h4{display:block;position:absolute;color:white;font-weight:bold;top:250px;width:550px;padding-left:210px}@media (max-width:767px){body.home-investor main .mz-banner-home-info h4{top:150px;width:100%;padding:0 25px}}body.home-investor main .mz-banner-home-info h4 span{color:#FFF200}
+body.home-investor main{background:url("//casaevideodigital.vteximg.com.br/arquivos/banner-home.png") no-repeat center center;background-size:cover}body.home-investor main .mz-banner-home-info h4{display:block;position:absolute;color:white;font-weight:bold;top:250px;width:550px;padding-left:210px}@media (max-width:767px){body.home-investor main .mz-banner-home-info h4{top:150px;width:100%;padding:0 25px}}body.home-investor main .mz-banner-home-info h4 span{color:#FFF200}
