cirilocabos-arquivos - header

--- a/cirilocabos-arquivos/CSS.mod.gre.product.css
+++ b/cirilocabos-arquivos/CSS.mod.gre.product.css
@@ -1,2 +1,3 @@
-/* davids - 15/01/2021 10:00:08 GMT-0200 */
+/* davids - 15/01/2021 16:29:38 GMT-0200 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
+.teste{border:1px solid red}
