--- a/cirilocabos-arquivos/CSS.mod.gre.product.css
+++ b/cirilocabos-arquivos/CSS.mod.gre.product.css
@@ -1,3 +1,3 @@
-/* davids - 18/01/2021 16:22:25 GMT-0200 */
+/* davids - 19/01/2021 10:33:08 GMT-0200 */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-.teste{border:1px solid red}
+.bread-crumb{color:#b1b1b1;text-transform:uppercase;float:left;font-size:10px;padding-top:10px}.bread-crumb ul{width:100%;display:flex}.bread-crumb ul li:not(:last-child){padding-right:10px;margin-right:10px;border-right:1px solid #b1b1b1}.teste{border:1px solid red}
