--- a/lupochile-arquivos/CSS.lupochile.lup.home.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.home.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 21/12/2020 17:57:17 GMT */
+/* Lugia - 19/01/2021 18:03:53 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
-body .mx-benefits-bar{padding:20px !important}@media (max-width:1080px){body .mx-benefits-bar{display:none}}
+body .mx-benefits-bar{padding:20px !important}@media (max-width:1080px){body .mx-benefits-bar{display:none}}@media (min-width:768px){body .vitrine-promo,body .vitrine-recomendacoes,body .second{display:none !important}}
