--- a/lupochile-arquivos/CSS.lupochile.lup.institucional.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.institucional.css
@@ -1,3 +1,3 @@
-/* Anonymouswill - 21/12/2020 17:57:17 GMT */
+/* Lugia - 18/01/2021 19:21:57 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
 .block_institucional h2{margin:15px 0;font-size:28px;color:#63a1d9}.block_institucional p{margin:25px 5vw;font-size:16px}
