--- a/lupochile-arquivos/CSS.lupochile.lup.system.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.system.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 21/12/2020 17:57:19 GMT */
+/* Lugia - 18/01/2021 19:21:58 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
