--- a/petstarget-arquivos/CSS.pst.far.qd-style-guide.css
+++ b/petstarget-arquivos/CSS.pst.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 18/12/2020 18:42:43 GMT */
+/* Anonymouswill - 26/01/2021 15:22:58 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
