--- a/vinicolaaurora-arquivos/CSS.via.far.qd-style-guide.css
+++ b/vinicolaaurora-arquivos/CSS.via.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 08/12/2020 11:47:37 GMT */
+/* Lugia - 26/01/2021 18:53:25 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
