--- a/queensberry-arquivos/CSS.qsb.far.qd-style-guide.css
+++ b/queensberry-arquivos/CSS.qsb.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 20/11/2020 13:06:28 GMT */
+/* Anonymouswill - 27/01/2021 11:36:29 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
