--- a/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
+++ b/lojaskubbo-arquivos/CSS.kbo.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Lugia - 10/11/2020 21:10:36 GMT */
+/* Anonymouswill - 27/01/2021 16:50:30 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
