--- a/petstarget-arquivos/CSS.pst.far.qd-style-guide.css
+++ b/petstarget-arquivos/CSS.pst.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 26/01/2021 15:22:58 GMT */
+/* Lugia - 29/01/2021 19:49:21 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
