--- a/canetascrown-arquivos/CSS.cro.far.qd-style-guide.css
+++ b/canetascrown-arquivos/CSS.cro.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 18/10/2020 10:56:22 GMT */
+/* Anonymouswill - 02/02/2021 19:54:35 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
