--- a/queensberry-arquivos/CSS.qsb.far.qd-style-guide.css
+++ b/queensberry-arquivos/CSS.qsb.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 29/01/2021 13:20:30 GMT */
+/* Lugia - 02/02/2021 19:21:20 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
