--- a/pmedic-arquivos/CSS.pec.far.qd-style-guide.css
+++ b/pmedic-arquivos/CSS.pec.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 05/02/2021 19:41:24 GMT */
+/* Lugia - 13/01/2021 18:50:22 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
