--- a/lupochile-arquivos/CSS.lupochile.lup.account.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.account.css
@@ -1,2 +1,2 @@
-/* Lugia - 18/01/2021 19:21:57 GMT */
+/* Anonymouswill - 18/02/2021 19:55:12 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
