--- a/lupochile-arquivos/CSS.lupochile.lup.system.css
+++ b/lupochile-arquivos/CSS.lupochile.lup.system.css
@@ -1,2 +1,2 @@
-/* Lugia - 18/01/2021 19:21:58 GMT */
+/* Anonymouswill - 18/02/2021 19:55:14 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
