--- a/comercialoliveira-arquivos/CSS.col.far.qd-style-guide.css
+++ b/comercialoliveira-arquivos/CSS.col.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* DESKTOP-NA07EK9 - 18/10/2020 10:56:22 GMT */
+/* Lugia - 18/02/2021 20:08:36 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
