--- a/canetascrown-arquivos/CSS.cro.far.qd-style-guide.css
+++ b/canetascrown-arquivos/CSS.cro.far.qd-style-guide.css
@@ -1,2 +1,2 @@
-/* Anonymouswill - 11/02/2021 17:59:22 GMT */
+/* Lugia - 25/02/2021 19:59:14 GMT */
 /*! Não edite esse arquivo, ele foi gerado de maneira automatizada */
